# keyguard

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: flake8.yml  ruff.yml
keyguard/: __init__.py  __main__.py  config.py  keyring_manager.py  logic.py  utils.py
keyguard/gui/components/: LabelValue.py  ProfilePanel.py  components.py
keyguard/gui/frames/: AuthFrame.py  CardFrame.py  MainFrame.py  TrainingFrame.py  __init__.py  auth_frame.py  card_frame.py  main_frame.py  training_frame.py
keyguard/gui/views/: AuthView.py  DashboardView.py  LearningSessionView.py  LearningView.py  NoProfile.py  SessionStatsView.py
